--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
         <nav>
             <img src="IMG/ICON NAV 2.png" class="Icon-NAV">
             <ul>
-                <li> <a href="#">Eu Sou</a></li>
+                <li> <a href="#">Eu SSSSSSSSou</a></li>
                 <li> <a href="#">Meus serviços</a></li>
                 <li> <a href="#">Hobbies</a></li>
                 <li> <a href="#">Contactos</a></li>
