--- a/Index.html
+++ b/Index.html
@@ -17,13 +17,13 @@
     <!--Sessão NavBar-->
 
     <div class="Hero">
-        <nav>
+        <nav id="Eu_Sou">
             <img src="IMG/ICON NAV 2.png" class="Icon-NAV">
             <ul>
-                <li> <a href="#">Eu SSSSSSSSou</a></li>
-                <li> <a href="#">Meus serviços</a></li>
-                <li> <a href="#">Hobbies</a></li>
-                <li> <a href="#">Contactos</a></li>
+                <li> <a href="#Eu_Sou">Eu Sou</a></li>
+                <li> <a href="#Meus_serviços">Meus serviços</a></li>
+                <li> <a href="#Hobbies">Hobbies</a></li>
+                <li> <a href="#Contactos">Contactos</a></li>
             </ul>
             <img src="IMG/Oder.jpg" class="Oder" onclick="toggleMenu()">
 
@@ -39,25 +39,25 @@
                     
                     <a href="#" class="sub-menu-link">
                         <img src="IMG/Oder.jpg" class="Oder">
-                        <p> Eu Sou</p>
+                        <p href="#Interesses"> Interesses</p>
                         <span>></span>
                     </a>
 
                     <a href="#" class="sub-menu-link">
                         <img src="IMG/Oder.jpg" class="Oder">
-                        <p> Meus Serviços</p>
+                        <p href="#Músicas"> Músicas</p>
                         <span>></span>
                     </a>
 
                     <a href="#" class="sub-menu-link">
                         <img src="IMG/Oder.jpg" class="Oder">
-                        <p> Meus Hobbies</p>
+                        <p href="#Actividades"> Actividades</p>
                         <span>></span>
                     </a>
 
                     <a href="#" class="sub-menu-link">
                         <img src="IMG/Oder.jpg" class="Oder">
-                        <p> Contactos</p>
+                        <p href="#Vlogs">Vlogs</p>
                         <span>></span>
                     </a>
 
@@ -79,7 +79,7 @@
 
 <header class="Etapa-1">
     <div class="Quadrado">
-        <h1>Eu Sou</h1>
+        <h1 id="Eu_Sou">Eu Sou</h1>
         <br>
         <h2>Engenheiro & Musico</h2>
         <br>
@@ -106,7 +106,7 @@
 
 
 <section class="serviços">
-    <h1>MEUS SERVIÇOS</h1>
+    <h1 id="Meus_serviços">MEUS SERVIÇOS</h1>
     <p>Adquira os meus serviços para cobrir as suas necessidades.</p>
 
     <div class="row">
@@ -137,7 +137,7 @@
 <!--Sessão meus interesses-->
 
 <section class="interesses">
-    <h1>INTERESSES</h1>
+    <h1 id="Interesses">INTERESSES</h1>
 
     <div class="roww">
         <div class="interesses-col">
@@ -161,7 +161,7 @@
 
 
 <section class="serviços">
-    <h1>MEUS HOBBIES</h1>
+    <h1 id="Hobbies">MEUS HOBBIES</h1>
     <p>É bom escrever porque reúne as duas alegrias: falar sozinho e falar a uma multidão.</p>
 
     <div class="row">
@@ -197,11 +197,11 @@
 <div class="footer">
 
     <div class="col-1">
-        <h3>MENU</h3>
-        <a href="#"> Eu Sou</a>
-        <a href="#">Meus serviços</a>
-        <a href="#">Hobbies</a>
-        <a href="#">Interesses</a>
+        <h3 id="#">MENU</h3>
+        <a href="#Eu_Sou"> Eu Sou</a>
+        <a href="#Meus_serviços">Meus serviços</a>
+        <a href="#Hobbies">Hobbies</a>
+        <a href="#Interesses">Interesses</a>
     </div>
 
     <div class="col-2">
@@ -214,7 +214,7 @@
     </div>
 
     <div class="col-3">
-        <h3>CONTACTOS</h3>
+        <h3 id="Contactos">CONTACTOS</h3>
         <p>Unitel
             <br>
             +244 937 001 300
@@ -229,13 +229,13 @@
         </p>
 
         <div class="social-icons">
-            <a href="#" class="fa-brands fa-facebook"></a>
+            <a href="https://www.facebook.com/OderOCPriviID" target="_blank" class="fa-brands fa-facebook"></a>
 
-            <a href="#" class="fa-brands fa-instagram"></a>
+            <a href="https://www.instagram.com/oder_privilegiado/" target="_blank" class="fa-brands fa-instagram"></a>
 
-            <a href="#" class="fa-brands fa-github"></a>
+            <a href="https://github.com/Oder-Privilegiado" target="_blank" class="fa-brands fa-github"></a>
 
-            <a href="#" class="fa-brands fa-tiktok"></a>
+            <a href="https://www.tiktok.com/@oder_privilegiado" target="_blank" class="fa-brands fa-tiktok"></a>
         </div>
     </div>
 </div>
