--- a/Index.html
+++ b/Index.html
@@ -102,6 +102,14 @@
 
 
 
+<!------Contacta-me------>
+<div class="contacta-me">
+    <p>Adquira os meus serviços para cobrir as suas necessidades.</p>
+</div>
+
+
+
+
 <!--Sessão Meus Serviços-->
 
 
@@ -131,6 +139,16 @@
     </div>
     
 </section>
+
+
+
+<!--Motivação-->
+
+
+
+<footer>
+    <p>Se por acaso estiver procurando por algo benefico, aqui é o lugar certo.</p>
+</footer>
 
 
 
@@ -191,10 +209,12 @@
 
 
 
+
 <!--Sessão Footer-->
 
 
 <div class="footer">
+    
 
     <div class="col-1">
         <h3 id="#">MENU</h3>
